[package]
name = "devenv-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Shell and PTY management for devenv"

[dependencies]
# PTY management
portable-pty.workspace = true

# Terminal handling
crossterm.workspace = true
iocraft.workspace = true

# Terminal state tracking
libghostty-vt.workspace = true
# Direct dep required to enable the `pkg-config` feature on libghostty-vt-sys.
# Without it, libghostty-vt pulls libghostty-vt-sys with default features and
# its build.rs invokes `zig build`, which fails when zig is not installed.
libghostty-vt-sys.workspace = true

# Async runtime
tokio = { workspace = true, features = ["sync", "rt", "signal", "io-util"] }

# Shell escaping
shell-escape.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
insta.workspace = true

[features]
default = []
deterministic-tui = []
test-all = ["test-pty", "deterministic-tui"]
test-pty = []

[package.metadata.cargo-machete]
ignored = ["libghostty-vt-sys"]
