[package]
name = "devenv-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
devenv-activity.workspace = true
devenv-cache-core.workspace = true
devenv-processes.workspace = true
devenv-shell = { path = "../devenv-shell" }
devenv-tui.workspace = true

async-trait.workspace = true
clap.workspace = true
console.workspace = true
miette.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["signal"] }
tokio-shutdown.workspace = true
tokio-util.workspace = true
tracing.workspace = true
sqlx.workspace = true
blake3.workspace = true
walkdir.workspace = true
shell-escape.workspace = true
base64 = "0.22"
globset = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["user", "signal"] }

[dev-dependencies]
pretty_assertions.workspace = true
proptest = "1.8"
tokio-test = "0.4"
