[package]
name = "devenv-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "signal",
] }
tokio-shutdown = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# TUI library
iocraft.workspace = true
crossterm = { workspace = true }

# Tracing integration
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Data structures
indexmap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }

# CLI argument parsing
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Nix log parsing
devenv-eval-cache = { path = "../devenv-eval-cache" }

# Activity system
devenv-activity = { path = "../devenv-activity" }

# Shell reload support
devenv-reload = { path = "../devenv-reload" }
avt = "0.14"
portable-pty = "0.9"
term_size = "0.3"
libc = "0.2"

# Shared task types
devenv-cache-core = { path = "../devenv-cache-core" }

# Time handling
once_cell = { workspace = true }
chrono = { workspace = true }

# Human-readable formatting
human-repr = { workspace = true }

# URL parsing
url = { workspace = true }

# Random number generation
rand = { workspace = true }


# Terminal UI components
console = { workspace = true }
[[bin]]
name = "tui-replay"
path = "src/bin/tui-replay.rs"

[dev-dependencies]
insta = { workspace = true }
