[package]
name = "devenv"
version.workspace = true
edition.workspace = true
license.workspace = true

# Make `cargo run` default to the devenv CLI
default-run = "devenv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devenv-activity.workspace = true
devenv-core = { workspace = true, features = ["clap"] }
devenv-eval-cache.workspace = true
devenv-processes.workspace = true
devenv-tasks.workspace = true
devenv-tui.workspace = true
devenv-cache-core.workspace = true
devenv-reload.workspace = true
devenv-shell.workspace = true
devenv-snix-backend = { workspace = true, optional = true }
devenv-nix-backend.workspace = true
tokio-shutdown.workspace = true

clap.workspace = true
clap_complete.workspace = true
cli-table.workspace = true
console.workspace = true
dialoguer.workspace = true
fd-lock.workspace = true
futures.workspace = true
hostname.workspace = true
include_dir.workspace = true
indoc.workspace = true
miette.workspace = true
nix.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tempfile.workspace = true
termimad.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
json-subscriber.workspace = true
which.workspace = true
whoami.workspace = true
xdg.workspace = true
similar.workspace = true
once_cell.workspace = true
shell-escape.workspace = true
rmcp.workspace = true
axum.workspace = true
secretspec.workspace = true
secrecy.workspace = true
url.workspace = true
valuable.workspace = true

# Optional OpenTelemetry dependencies
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[build-dependencies]
vergen-gitcl.workspace = true

[package.metadata.cargo-machete]
ignored = ["vergen-gitcl"]

[dev-dependencies]
devenv-nix-backend-macros.workspace = true

[features]
default = ["otlp-grpc"]
otlp = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:tracing-opentelemetry",
  "dep:opentelemetry-otlp",
]
otlp-grpc = ["otlp", "opentelemetry-otlp/grpc-tonic"]
otlp-http-protobuf = ["otlp", "opentelemetry-otlp/http-proto"]
otlp-http-json = ["otlp", "opentelemetry-otlp/http-json"]
test-all = [
  "test-mcp",
  "devenv-processes/test-all",
  "devenv-nix-backend/test-all",
  "devenv-reload/test-all",
  "devenv-shell/test-all",
  "devenv-tui/test-all",
]
test-mcp = []
snix = ["dep:devenv-snix-backend", "devenv-core/snix"]
