[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Rowan Molony <rowan.molony@mainstreamrp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
