[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace]
